messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: django.mydomain.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
